# viridian

./: Dockerfile  pyproject.toml
.ci/: install_dependencies.sh  install_mummer.sh
