[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "viridian"
version = "1.3.1"
description = 'Consensus builder from amplicon sequenced virus reads'
readme = "README.md"
requires-python = " >=3.8,<3.12"
keywords = []
authors = [
    {name="Jeff Knaggs"},
    {name="Martin Hunt"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cluster_vcf_records >= 0.13.3",
    "intervaltree",
    "matplotlib",
    "pyfastaq",
    "pysam",
    "requests >= 2.26.0",
    "varifier @ git+https://github.com/iqbal-lab-org/varifier.git@8bc8726ed3cdb337dc47b62515e709759e451137",
    "cyclon @ git+https://github.com/iqbal-lab-org/cylon.git@57d559a76254b0b95785f7c02fa58ef806713e01"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
viridian = "viridian.__main__:main"
viridian_workflow = "viridian.__main__:main"